<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10px">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rowBg">
        <ImageView
            android:id="@+id/autollogoImg"
            android:layout_margin="10px"
            android:src="@drawable/auto_toll_gr_logo"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"/>
        <RelativeLayout
            android:id="@+id/movieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/autollogoImg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/purchaseday"
                android:text="@string/history_day"
                android:layout_margin="10px"
                android:textColor="@color/movieTitle"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_price"
                android:id="@+id/purchaseprice"
                android:layout_below="@id/purchaseday"
                android:textColor="@color/yearTitle"
                android:textSize="16sp"
                android:layout_margin="10px"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_time"
                android:id="@+id/purchasetime"
                android:layout_margin="10px"
                android:textSize="16sp"
                android:textColor="@color/movieTitle"
                android:layout_below="@id/purchaseprice"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>