<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/autotollgrbackground">

    <ImageView
        android:layout_width="@dimen/auto_toll_gr_logo_width"
        android:layout_height="@dimen/auto_toll_gr_logo_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/auto_toll_gr_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/LR_pages_text_views_width"
        android:layout_height="@dimen/LR_pages_text_views_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <ImageView
            android:layout_width="@dimen/LR_icon_width"
            android:layout_height="@dimen/LR_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/LR_pages_text_views_margin_ivm"
            android:background="@drawable/baseline_mail_outline_white_24dp" />

        <EditText
            android:id="@+id/login_e_mail"
            android:layout_width="@dimen/LR_pages_text_views_width"
            android:layout_height="@dimen/LR_pages_text_views_height"
            android:layout_marginLeft="@dimen/LR_pages_text_views_margin_etm"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_e_mail"
            android:inputType="text"
            android:maxLength="25" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/LR_pages_text_views_width"
        android:layout_height="@dimen/LR_pages_text_views_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="@dimen/LR_icon_width"
            android:layout_height="@dimen/LR_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/LR_pages_text_views_margin_ivm"
            android:background="@drawable/baseline_lock_white_24dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="@dimen/LR_pages_text_views_width"
            android:layout_height="@dimen/LR_pages_text_views_height"
            android:layout_marginLeft="@dimen/LR_pages_text_views_margin_etm"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLength="40" />
    </LinearLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="@dimen/LR_pages_buttons_width"
        android:layout_height="@dimen/LR_pages_buttons_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_login_button"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:onClick="onClick"
        android:id="@+id/login_register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_register_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button"
        app:layout_constraintVertical_bias="0.919" />
</androidx.constraintlayout.widget.ConstraintLayout>